syntax = "proto3";

package blockservice;

enum Status {
  UNKNOWN = 0;
  SUCCESS = 1;
  FAILURE = 2;
}

message ReadRequest {
  string volumeId = 2;
  string blockId = 3;
  uint64 position = 4;
  uint32 chunkSize = 5;
}

message ReadResponse {
  string volumeId = 2;
  string blockId = 3;
  bytes buffer = 5;
}

message WriteRequest {
  string volumeId = 2;
  bytes buffer = 4;
}

message WriteResponse {
  string volumeId = 2;
  string blockId = 3;
  uint32 size = 5;
}

message DeleteResponse {
  string volumeId = 2;
  Status status = 3;
}

service BlockService {
  rpc Read (ReadRequest) returns (stream ReadResponse);
  rpc Write (stream WriteRequest) returns (WriteResponse);
  rpc Delete (ReadRequest) returns (DeleteResponse);
}
